@@ -1,3 +1,8 @@
+2005-05-12  Sam Steingold  <sds@gnu.org>
+
+	* io.d (signal_reader_error): expect STREAM in sp
+	(read_internal): pass stream_ in sp
+
 2005-05-11  Bruno Haible  <bruno@clisp.org>
 
 	Make it possible to use 'aint' = 'uint64' on 32-bit machines.
